--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
   <head>
     <title>Car</title>
-    <meta property="og:title" content="123">
-    <meta property="og:description" content="123">
-    <meta property="og:image" content="123">
+    <meta property="og:title" content="Subaru">
+    <meta property="og:description" content="WRX">
+    <meta property="og:image" content="https://www.automobilemag.com/uploads/sites/11/2019/08/Subaru-WRX-STI-209.jpg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 Paste script here
